--- a/templates/services.html
+++ b/templates/services.html
@@ -36,14 +36,14 @@
       {% for service in services %}
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card listing-preview">
-          <img class="card-img-top" src="{% static 'img/building.jpg' %}" alt="">
+          <img class="card-img-top" src="{{ service.photo_main.url }}" alt="">
           <div class="card-img-overlay">
           </div>
           <div class="card-body">
             <div class="listing-heading text-center">
               <h4 class="text-primary">{{ service.title }}</h4>
               <p class="text-justify">
-               {{ service.description|truncatewords:40  }}</p>
+                {{ service.description|truncatewords:40 }}</p>
             </div>
             <a href="{% url 'service' service.id %}" class="btn btn-primary btn-block">More Info</a>
           </div>
@@ -56,47 +56,47 @@
       </div>
       {% endif %}
 
-  <!-- pagination -->
-  <div class="row">
-    <div class="col-md-12">
-      {% if services.has_other_pages %}
-      <ul class="pagination">
-        <!-- Previous page button -->
-        {% if services.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ services.previous_page_number }}">&laquo;</a>
-        </li>
-        {% else %}
-        <li class="page-item disabled">
-          <a class="page-link">&laquo;</a>
-        </li>
-        {% endif %}
-        <!-- Loop through pages -->
-        {% for i in services.paginator.page_range %}
-        {% if services.number == i %}
-        <li class="page-item active">
-          <a class="page-link">{{i}}</a>
-        </li>
-        {% else %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{i}}">{{i}}</a>
-        </li>
-        {% endif %}
-        {% endfor %}
-        <!-- Next page button -->
-        {% if services.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ services.next_page_number }}">&raquo;</a>
-        </li>
-        {% else %}
-        <li class="page-item disabled">
-          <a class="page-link">&raquo;</a>
-        </li>
-        {% endif %}
-      </ul>
-      {% endif %}
-    </div>
-  </div>
+      <!-- pagination -->
+      <div class="row">
+        <div class="col-md-12">
+          {% if services.has_other_pages %}
+          <ul class="pagination">
+            <!-- Previous page button -->
+            {% if services.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ services.previous_page_number }}">&laquo;</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link">&laquo;</a>
+            </li>
+            {% endif %}
+            <!-- Loop through pages -->
+            {% for i in services.paginator.page_range %}
+            {% if services.number == i %}
+            <li class="page-item active">
+              <a class="page-link">{{i}}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{i}}">{{i}}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+            <!-- Next page button -->
+            {% if services.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ services.next_page_number }}">&raquo;</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+              <a class="page-link">&raquo;</a>
+            </li>
+            {% endif %}
+          </ul>
+          {% endif %}
+        </div>
+      </div>
 </section>
 
 <section id="services" class="py-5 bg-secondary text-white">
