--- a/templates/index.html
+++ b/templates/index.html
@@ -6,108 +6,107 @@
 <!-- Carousel Slide -->
 <div class="container mt-5">
   <div id="slider" class="carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
       <li data-target="#slider" data-slide-to="0" class="active"></li>
       <li data-target="#slider" data-slide-to="1"></li>
       <li data-target="#slider" data-slide-to="2"></li>
-    </ul>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/building.jpg' %}" alt="Instagram" width="1100" height="500">
-        <div class="carousel-caption">
-          <h3>Instagram followers</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, porro!</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/building.jpg' %}" alt="Telegram" width="1100" height="500">
-        <div class="carousel-caption">
-          <h3>Visit and Seen</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed!</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/building.jpg' %}" alt="Twitter" width="1100" height="500">
-        <div class="carousel-caption">
-          <h3>Telegram Member</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, expedita!</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#slider" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#slider" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
-  </div>
-</div>
-<br>
-
-<!-- Alerts -->
-{% include 'alerts.html' %}
-
-<!-- Services -->
-<section id="listings">
-  <div class="container mt-5">
-    <h3 class="text-center mb-3">Latest Services</h3>
-    <div class="row">
-      {% if services %}
+    </ol>
+    <div class="carousel-inner" role="listbox">
       {% for service in services %}
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="{{ service.photo_main.url }}" alt="">
-          <div class="card-img-overlay">
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">{{ service.title }}</h4>
-              <p class="text-justify">
-                {{ service.description|truncatewords:40 }}</p>
-            </div>
-            <a href="{% url 'service' service.id %}" class="btn btn-primary btn-block">More Info</a>
+      {% if forloop.counter == 1 %}
+      <div class="carousel-item active">
+        {% else %}
+        <div class="carousel-item">
+          {% endif %}
+          <a href="{% url 'service' service.id %}">
+            <img class="d-block img-fluid" src="{{ service.photo_main.url }}" alt="Image" width="460" height="345">
+          </a>
+          <div class="carousel-caption">
+            <h3>{{ service.title }}</h3>
+            <!-- <p>{{ service.teaser }}</p> -->
           </div>
         </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-      {% else %}
-      <div class="col-md-12">
-        <p>No services Available</p>
-      </div>
-      {% endif %}
 
+      <!-- CONTROLS -->
+      <a href="#slider" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+
+      <a href="#slider" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
     </div>
   </div>
-</section>
 
-<section id="services" class="py-5 bg-secondary text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-3">
-        <i class="fas fa-feather fa-4x"></i>
-        <hr>
-        <h4>Easy to Use</h4>
-        <p>A simple and useful user interface that helps you to get things done</p>
-      </div>
-      <div class="col-md-3">
-        <i class="fas fa-shield-alt fa-4x"></i>
-        <hr>
-        <h4>Totally Secure</h4>
-        <p>All payment methods and technologies consider the data security</p>
-      </div>
-      <div class="col-md-3">
-        <i class="fas fa-bolt fa-4x"></i>
-        <hr>
-        <h4>Fastest Delivery</h4>
-        <p>Services that you buy will be delivered as soon as possible</p>
-      </div>
-      <div class="col-md-3">
-        <i class="far fa-handshake fa-4x"></i>
-        <hr>
-        <h4>Customer Happiness</h4>
-        <p>We are always here to help you after or before your purchase</p>
+  <br>
+
+  <!-- Alerts -->
+  {% include 'alerts.html' %}
+
+  <!-- Services -->
+  <section id="listings">
+    <div class="container mt-5">
+      <h3 class="text-center mb-3">Latest Services</h3>
+      <div class="row">
+        {% if services %}
+        {% for service in services %}
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card listing-preview">
+            <img class="card-img-top" src="{{ service.photo_main.url }}" alt="">
+            <div class="card-img-overlay">
+            </div>
+            <div class="card-body">
+              <div class="listing-heading text-center">
+                <h4 class="text-primary">{{ service.title }}</h4>
+                <p class="text-justify">
+                  {{ service.description|truncatewords:40 }}</p>
+              </div>
+              <a href="{% url 'service' service.id %}" class="btn btn-primary btn-block">More Info</a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+        {% else %}
+        <div class="col-md-12">
+          <p>No services Available</p>
+        </div>
+        {% endif %}
+
       </div>
     </div>
-  </div>
-</section>
-{% endblock %}
+  </section>
+
+  <section id="services" class="py-5 bg-secondary text-white">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-3">
+          <i class="fas fa-feather fa-4x"></i>
+          <hr>
+          <h4>Easy to Use</h4>
+          <p>A simple and useful user interface that helps you to get things done</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fas fa-shield-alt fa-4x"></i>
+          <hr>
+          <h4>Totally Secure</h4>
+          <p>All payment methods and technologies consider the data security</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fas fa-bolt fa-4x"></i>
+          <hr>
+          <h4>Fastest Delivery</h4>
+          <p>Services that you buy will be delivered as soon as possible</p>
+        </div>
+        <div class="col-md-3">
+          <i class="far fa-handshake fa-4x"></i>
+          <hr>
+          <h4>Customer Happiness</h4>
+          <p>We are always here to help you after or before your purchase</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  {% endblock %}
