add field teaser in models

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           </a>
           <div class="carousel-caption">
             <h3>{{ service.title }}</h3>
-            <!-- <p>{{ service.teaser }}</p> -->
+            <p>{{ service.teaser }}</p>
           </div>
         </div>
         {% endfor %}
