--- a/templates/service.html
+++ b/templates/service.html
@@ -8,7 +8,7 @@
     <div class="row text-center">
       <div class="col-md-12">
         <h1 class="display-4">{{ service.title }}</h1>
-        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+        <p class="lead">{{ service.teaser }}</p>
       </div>
     </div>
   </div>
