add field is_slide

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <li data-target="#slider" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-      {% for service in services %}
+      {% for service in slides %}
       {% if forloop.counter == 1 %}
       <div class="carousel-item active">
         {% else %}
