--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>We Search For The Perfect Home</h2>
+        <h2>We Search For The Perfect Service</h2>
         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
         <img class="img-main img-fluid mb-3" src="{% static 'img/about.jpg' %}" alt="">
         <p  class="text-justify" class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
