--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -2,7 +2,7 @@
   <div class="container text-center">
     <div class="row">
       <div class="col-md-12">
-        <a href="#">
+        <a href="{% url 'help' %}">
           FAQ / Help / Support
           <!-- <i class="fab fa-telegram"></i> Support Social Networks -->
         </a>
