--- a/templates/help.html
+++ b/templates/help.html
@@ -1,5 +1,121 @@
 {% extends 'base.html' %}
-{% block title %} | Help {% endblock %}
+{% block title %} | Frequently Asked Questions {% endblock %}
 {% block content %}
-<h1>Help</h1>
+
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h1 class="display-4">Frequently Asked Questions</h1>
+        <p class="lead">If you couldn't find your answer here, feel free to contact <b>live support</b></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container">
+  <div id="accordion" class="py-5">
+
+    <div class="card">
+      <div class="card-header">
+        <h5>
+          <a href="#collapse1" data-parent="#accordion" data-toggle="collapse">
+            While Buying an Account What Should I Pay Attention to?
+          </a>
+        </h5>
+      </div>
+
+      <div id="collapse1" class="collapse show">
+        <div class="card-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum
+          vel ipsum architecto
+          aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis
+          sint
+          et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <h5>
+          <a href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+            How Can I Buy an Account?
+          </a>
+        </h5>
+      </div>
+
+      <div id="collapse2" class="collapse">
+        <div class="card-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum
+          vel ipsum architecto
+          aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis
+          sint
+          et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <h5>
+          <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">
+            How Can I Sell My Account?
+          </a>
+        </h5>
+      </div>
+
+      <div id="collapse3" class="collapse">
+        <div class="card-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum
+          vel ipsum architecto
+          aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis
+          sint
+          et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <h5>
+          <a href="#collapse4" data-parent="#accordion" data-toggle="collapse">
+            Is There Any Fee While Adding Balance?
+          </a>
+        </h5>
+      </div>
+
+      <div id="collapse4" class="collapse ">
+        <div class="card-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum
+          vel ipsum architecto
+          aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis
+          sint
+          et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <h5>
+          <a href="#collapse5" data-parent="#accordion" data-toggle="collapse">
+            How Do I Add Balance?
+          </a>
+        </h5>
+      </div>
+
+      <div id="collapse5" class="collapse">
+        <div class="card-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum
+          vel ipsum architecto
+          aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis
+          sint
+          et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 {% endblock %}
