--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <a href="{% url 'help' %}">
-          FAQ / Help / Support
+          FAQ / Help
           <!-- <i class="fab fa-telegram"></i> Support Social Networks -->
         </a>
       </div>
